--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -17,7 +17,7 @@ In this chapter we describe what we believe will be advantageously for future st
 		\label{fig:cisco_systems}
 	\end{center} 
 \end{figure}
-\Cref{fig:cisco_systems} shows how the information flow is intended. The client connecting to the Cisco services can function as a server that requests data from all Cisco services that we have access to. Alternatively, a server can be implemented for each Cisco service. However, this solution has several downsides. First, it means corporations supplying the aSTEP project with information will have to have hardware running the server, which requires maintenance. Second, this solution is not scalable. The server running the aSTEP database will potentially be overloaded, as it has to handle each individual Cisco system sending information. As more Cisco systems are added, there will be less time to process received data. An alternative approach is to have the aSTEP database server request data using a round robin approach, however, with an increase in connected Cisco systems, the interval at which we receive new information from a given system also increases.
+\Cref{fig:cisco_systems} shows how the information flow is intended. The client connecting to the Cisco services can function as a server that requests data from all Cisco services that we have access to. Alternatively, a server can be implemented for each Cisco service. However, this solution has several downsides. First, it means corporations supplying the multi-project with information will need to have a server running, which requires maintenance. Second, this solution is not scalable. The server running the aSTEP database will potentially be overloaded, as it has to handle each individual Cisco system sending information. As more Cisco systems are added, there will be less time to process received data. An alternative approach is to have the aSTEP database server request data using a round robin approach, however, with an increase in connected Cisco systems, the interval at which we receive new information from a given system also increases.
 
 The optimal solution to this issue is to create a hierarchy of servers, such that the database server only receives data from a limited amount of intermediate servers, each of which also receive information from an amount of sources. During the start up of the aSTEP multi-project we have access to a single Cisco MSE system, and as such we will not focus on building this hierarchy. However, as the project grows and additional Cisco systems are integrated, it will eventually become a necessity.
 
