--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -81,4 +81,4 @@ Our second requirement is that we wish to harvest as much data, in terms of posi
 
 There are several arguments pointing towards Cisco MSE rather than Redpin. First and foremost, Cisco MSE is in comparison a lot more convenient, as it already affords the desired functionality and requires substantially less set-up time. Secondly, the amount of documentation for Cisco MSE far outweighs what little documentation there is for Redpin. Cisco MSE is a commercial system, and is therefore updated regularly. As of 7/3/2016, Redpin had its most recent update in May 2013. Lastly, Redpin only claims to be able to position devices at room-level precision, while Cisco claims to position devices within rooms. As a consequence of these arguments we chose to integrate MSE for the indoor positioning system for aSTEP.
 
-AAU uses the standard version of MSE to position wireless devices across all their campuses. We plan on using the data available from this system as mock data for the aSTEP project.
+AAU uses the standard version of MSE to position wireless devices across all their campuses. We plan on using the data available from this system as initial data for the applications groups to use.
