--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -6,16 +6,16 @@ This report seeks to explain design decisions and what the purpose of the system
 \subsection{Code Documentation} \label{sec:code_documentation}
 We have put in additional effort to document the code for future development. This has been done by explaining all non-trivial methods in the program. Specifically, for each method we have described the general functionality as well as the method signature. In addition, links are created between methods calling classes or other methods. 
 
-After a presentation of Java-Doc at the super-group meeting on March 31, Java-Doc was elected the standard tool for code documentation in the aSTEP project.
-As we finish documenting segments of the code, we generate a Java-Doc, which is a PDF document listing methods and their description, and upload it to the Wiki page \cite{dokumentation_astep} on GitLab for other members of the project to see. The links in the comments are transferred to the Java-doc, enabling interactive documentation. 
+After a presentation of Java-Doc at the super-group meeting on March 31, Java-Doc was elected the standard tool for code documentation in the aSTEP multi-project.
+As we finish documenting segments of the code, we generate a Java-Doc, which is a PDF document listing methods and their description, and upload it to the Wiki page \cite{dokumentation_astep} on GitLab for other members of the multi-project to see. The links in the comments are transferred to the Java-doc, enabling interactive documentation. 
 Doing this is a continuous process and will be continued throughout the entire project, whenever code undergoes change as well as when additions are made.
 \sfx{Make sure newest code is documented properly.}
 \sfx{Write about testdriven development in discussion.}
 
 \subsection{Code Testing}\label{subsec:unit_testing}
-Many of the aSTEP components communicate with each other by calling methods or sharing data. These dependencies introduce a requirement for correctness of code across the project. Consequently, unit tests are created to ensure functionality behaves according to the intention. The tests can be used to simulate the characteristics of the usage of the code and ensure that edge cases and unintended uses are handled properly. 
+Many of the aSTEP components communicate with each other by calling methods or sharing data. These dependencies introduce a requirement for correctness of code across the projects in aSTEP. Consequently, unit tests are created to ensure functionality behaves according to the intention. The tests can be used to simulate the characteristics of the usage of the code and ensure that edge cases and unintended uses are handled properly. 
 
-Changes in an implemented component may have unforeseen obscure consequences on other components because of indirect dependencies. When such an error occurs it is helpful to have tests that catch them before the changes are shared with everyone else in the project. This is ensured by use of a common GitLab server, such that whenever a change is pushed, the entire project is compiled and all the tests will be processed. The build will be marked as erroneous if the compilation or a test fails. This increase the robustness of the program, granted that unit test have been written for the program.
+Changes in an implemented component may have unforeseen obscure consequences on other components because of indirect dependencies. When such an error occurs it is helpful to have tests that catch them before the changes are shared with everyone else in the multi-project. This is ensured by use of a common GitLab server, such that whenever a change is pushed, the aSTEP program is compiled and all the tests will be processed. The build will be marked as erroneous if the compilation or a test fails. This increase the robustness of the program, granted that unit test have been written for the program.
 
 The code developed in this project will be further improved and expanded on by future students. Unit tests provide additional support for the documentation and facilitates understanding the code.
 By writing tests for the essential parts of the code, future developers will have an easier time understanding and developing the project as well as maintain it. 
