--- a/formalia/conclusion.tex
+++ b/formalia/conclusion.tex
@@ -13,4 +13,4 @@ The foundation for a small tracking system was laid, with the future goal of bei
 % Sprint 4 + resten
 In order to give future students a smooth start, when they take ownership of the project, a set of precautions have been made. This involves code documentation, unit tests, the section \nameref{sec:catchup} and the various "How-to"s that have been made for this project's wiki at GitLab. 
 
-Even tough we did not complete our own IPS, we will conclude that the project was a success. It was possible to relevant positional data to the aSTEP project with the combined effort of the systems we made thus completing our primary goal. Valuable experience was gained by cooperating with the other members of the aSTEP project by doing numerous minor collaborations and other team oriented tasks.
+Even tough we did not complete our own IPS, we will conclude that the project was a success. It was possible to deliver relevant positional data to the multi-project with the combined effort of the systems we made thus completing our primary goal. Valuable experience was gained by cooperating with the other members of the multi-project by doing numerous minor collaborations and other team oriented tasks.
