--- a/rapport.tex
+++ b/rapport.tex
@@ -45,7 +45,7 @@
 \appendix														% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
 \phantomsection													% Kunstigt afsnit, som hyperlinks kan 'holde fast i'
 \pdfbookmark[0]{Appendiks}{appendiks}							% Tildeler en klikbar bookmark til den endelige PDF
-
+\include{appendix/data_dump}
 
 %%Glossary
 %\printglossary[style=long]
