--- a/formalia/conclusion.tex
+++ b/formalia/conclusion.tex
@@ -1,16 +1,16 @@
 \chapter{Conclusion}
 % Hvad har vi lavet?
-In the course of this project we have build an ILBS which is capable of delivering indoor positioning data in real-time from Wi-Fi devices inside a set perimeter. This is done utilising a RESTFful service to communicate with a Cisco MSE service from which we are able to transfer and process the captured data. After the data is processed it is send to a database of which other aSTEP developers are responsible for. The data can then be requested by the different application and API developing groups.
+In the course of this project we have built an ILBS which is capable of delivering indoor positioning data in real-time from Wi-Fi devices inside a set perimeter. This is done utilising a RESTFful service to communicate with a Cisco MSE service from which we are able to transfer and process the captured data. After the data is processed it is sent to a database, which other aSTEP developers are responsible for. The data can then be requested by the different application and API developing groups.
 
 % Sprint 1
-In order to acquire mock data for aSTEP we chose to integrate MSE for the indoor positioning system as it was the most convenient choice. MSE was already installed at campus and the functionality it offers was sufficient to our needs. The data is processed and modified before it reaches the database as we had to obfuscate some of the sensitive personal data. This was done because of a demand from the MSE administrator and the Danish law of \textit{Directive on privacy and electronic communications}. As of such it was decided to obfuscate the sensitive person data of those users that did not consent.
+In order to acquire positioning data for aSTEP we chose to integrate MSE for the indoor positioning system as it was the most convenient choice. MSE was already installed at campus and the functionality it offers was sufficient for our needs. The data is processed and modified before it reaches the database, as we had to obfuscate some of the sensitive personal data. This was done because of a demand from the MSE administrator and the Danish regulation called \textit{Directive on privacy and electronic communications}. As such it was decided to obfuscate the person sensitive data of those users that did not give their consent.
 
 % Sprint 2
-The client was build to acquire data from multiple MSE services, as well as our intimidate server, and for sending data to the database. The client was designed to be robust and flexible, which was achieved by providing it with mechanisms for handling errors and by implementing a RESTful service for user inputs.
+A client was built to acquire data from multiple MSE services, as well as our intermediate server, and to forward the data to a database. The client was designed to be robust and flexible, which was achieved by providing it with mechanisms for handling errors and by implementing a RESTful service for user inputs.
 
 % Sprint 3
 The foundation for a small tracking system was laid, with the future goal of being comparable with MSE in terms of the precision of the geographical coordinates. % Hvad er der mere at sige?
 % Sprint 4 + resten
-In order to give future students a smooth start, when they take ownership of the project, a set of precautions have been made. This involves code documentation, unit tests, the section \nameref{sec:catchup} and the various "How-to"s that have been made for this project's wiki at GitLab. 
+In order to give future students a smooth start when they take ownership of the project, a set of improvements have been made. This involves code documentation, unit tests, a catch-up section and the various "How-to"s that have been made for this project's wiki at GitLab. 
 
-Even tough we did not complete our own IPS, we will conclude that the project was a success. It was possible to relevant positional data to the aSTEP project with the combined effort of the systems we made thus completing our primary goal. Valuable experience was gained by cooperating with the other members of the aSTEP project by doing numerous minor collaborations and other team oriented tasks.
+Even though we did not complete our own IPS, we conclude that the project was a success. It was possible to acquire relevant positional data for the aSTEP project with the combined effort of the systems we made, thus completing our primary goal. Valuable experience was gained from cooperating with the other members of the aSTEP project through numerous collaborations and other team oriented tasks.
