--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -1,12 +1,9 @@
 \chapter{Future Work}
 \label{Cha:Future_Work}
-In this chapter we describe what we believe will be advantageously for future students to look into in order to improve and further the system 
+In this chapter we describe what we believe will be advantageously for future students to look into in order to improve and further the system. 
 %This chapter list the aspect of Cisco system and Indoor location based service work, for future semesters.
+We will here discuss security, potential development of our IPS and changes that could be made to our systems. 
 
-\begin{itemize}
-	\item Research better ways of obfuscating the MAC addresses so it is not stored in plain text.\ofx{have we not done this sufficient now?}
-	\item Secure the connection between Cisco system and the DB server, so data is not possible to sniff.
-\end{itemize}
 
 
 \section{Data Flow from Cisco to the Database}\label{sec:data_flow}
