--- a/future_work/Coordinate_Formates.tex
+++ b/future_work/Coordinate_Formates.tex
@@ -1,3 +1,3 @@
-\section{Coordinate Formates}
+\section{Coordinate Formats}
 As described in \cref{sec:geo_coordinates}, there are three formats for geographical coordinates. We have chosen to provide the decimal degree format because it is the format used by the outdoor location groups and the format requested by the application group utilising indoor positioning.
 However, future applications as well as future development on existing applications may need other formats. We have in \cref{sec:geo_coordinates} provided the necessary calculations to change the format. These calculations can be used in the future to implement the api.
