corrected coordinate formats

--- a/future_work/future_work.tex
+++ b/future_work/future_work.tex
@@ -1,10 +1,8 @@
 \chapter{Future Work}
 \label{Cha:Future_Work}
-In this chapter we describe what we believe will be advantageously for future students to look into in order to improve and further the system. 
+In this chapter we describe what we believe will be advantageous for future students to look into in order to improve and further the system. 
 %This chapter list the aspect of Cisco system and Indoor location based service work, for future semesters.
-We will here discuss security, potential development of our IPS and changes that could be made to our systems. 
-
-
+We will discuss security, potential development of our IPS and changes that could be made to our systems. 
 
 \section{Data Flow from Cisco to the Database}\label{sec:data_flow}
 \begin{figure}[ht]
