--- a/appendix/data_dump.tex
+++ b/appendix/data_dump.tex
@@ -1,4 +1,4 @@
-\begin{lstlisting}[caption={Failed Connection snapshot},label={lst:data_dump},mathescape]
+\begin{lstlisting}[caption={TCP Data Package},label={lst:data_dump},mathescape]
 ***********************TCP Packet*************************
 IP Header
 |-IP Version        : 4
