--- a/bib.bib
+++ b/bib.bib
@@ -445,3 +445,15 @@
 	note = {Accessed 20-5-2016},
 	url ={http://www.binarytides.com/packet-sniffer-code-c-linux/}
 }
+@MISC{Guava,
+	author = {Google},
+	title = {Guava: Google Core Libraries for Java 19.0 API},
+	note = {Accessed 24-5-2016},
+	url ={http://google.github.io/guava/releases/19.0/api/docs/}
+}
+@MISC{intellij,
+	author = {Jetbrains},
+	title = {IntelliJ IDEA},
+	note = {Accessed 24-5-2016},
+	url ={https://www.jetbrains.com/idea/}
+}
