Fucka u whale, fucka you Anders!

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -68,7 +68,7 @@ Redpin is an open source indoor positioning system that uses location patterning
 
 Google have also developed their own positioning system. They have made indoor navigation and tracking possible trough their Indoor Maps project \cite{IPSoverGPS}, which lets users map a building by uploading a floor plan of said building. After the floor plan has been accepted, the system will request information about the location of the WI-FI access points in the building \cite{googleindoormaps}. A user can then see their own location on Google maps at any time. Google have been very secretive in regards to what tracking approaches they use, as such it is difficult to evaluate the technology.
 
-Cisco have developed a location-aware wireless network system, Cisco Mobility Services Engine (MSE), which utilises WI-FI triangulation \cite{CiscoTri}. MSE makes it possible to track the location of up to 25000 network devices at once, regardless of whether the devices are connected to the network \cite{cisco25000}. Using the RSSI data from the access points, the MSE controller calculates distance and compares time of arrival to perform a triangulation and obtain a position \cite{ciscoMSE}.
+Cisco have developed a location-aware wireless network system, Cisco Mobility Services Engine (MSE), which utilises WI-FI triangulation \cite{CiscoTri}. MSE makes it possible to track the location of up to 25000 network devices at once, regardless of whether the devices are connected to the network \cite{cisco25000}. Using the RSSI data from the access points, the MSE controller calculates distance and compares time of arrival to perform a triangulation and obtain a position \cite{ciscoMSE}. The MSE can provide a radius for each device called confidence factor. This means it is 95\% certain the user is within the informed radius \cite{MSE_faq}.
 The building is modelled by the use of an outline of the floor plan. The image is converted to a coordinate system that is placed on top of the model, which is then supplied with the positions of the static access points in the building. With this information it is possible to get the relative position of any device in relation to the origin of the coordinate system. It is these relative positions that are used to track wireless devices. MSE also has the capability of calculating geographic coordinates.
 Cisco claim to have a location precision of less than 1 meter, refresh rate of 10-120 updates per minute and a system latency of 2-4 seconds \cite{dimensions}. 
 
