--- a/4sprint/catch_up.tex
+++ b/4sprint/catch_up.tex
@@ -26,7 +26,7 @@ Sending the Java program to the virtual intermediate server:
 \end{enumerate}
 
 \subsection*{IntelliJ Debug Configurations}
-When further developing the project it is useful to share the debug configurations, such that the project setup only has to be done on one computer. In IntelliJ, open the Edit Configurations screen and tick the shared box. This creates a folder in the .idea project folder called runConfigurations, which can be shared. When opening the project, IntelliJ will automatically detect existing debug configurations in this folder.
+When further developing the project it is useful to share the debug configurations, such that the project setup only has to be done on one computer. In the IDE IntelliJ \cite{intellij}, open the Edit Configurations screen and tick the shared box. This creates a folder in the .idea project folder called runConfigurations, which can be shared. When opening the project, IntelliJ will automatically detect existing debug configurations in this folder.
 
 \subsection*{Projects under Indoor Repository}
 The Indoor (ID) Gitlab repository contains several IntelliJ projects. The projects are called: testingPrograms, RestfulMSE, indoorLibrary, indoorCore. Additionally you will be able to find a JavaDocs folder containing code documentation.
