--- a/4sprint/intermediate_server_update.tex
+++ b/4sprint/intermediate_server_update.tex
@@ -9,7 +9,7 @@ An update has been implemented for the intermediate server to expedite debugging
 
 \subsection*{Logging}
 During the course of the third and fourth sprint we encountered sporadic downtime on our intermediate server in the form of erroneous response of complete lack thereof. Upon further investigation, we have found that this is a consequence of MSE being down for maintenance. We have implemented two tools that will assist developers in debugging in these situations.
-First, the intermediate server now utilises Log4j \cite{log4j} to log error messages during execution. These error logs are stored in log files saved locally, which can be accessed and read as cleartext. The log only concerns errors and alike, and each log entry contains a timestamp, error message, error level and exception type. We believe it would be beneficial for future development to have an additional log that records other messages as well. That information can be used to debug potential errors and to analyse the connectivity history.
+First, the intermediate server now utilises Log4j \cite{log4j} to log error messages during execution. We decided to use Log4j as the other groups were also using it, which means that the recorded errors will be send to the same log file when executed on the aSTEP server. A member of the aSTEP group configured it such that everyone who works on the project would have the same settings. These error logs are stored in log files saved locally, which can be accessed and read as cleartext. The log only concerns errors and alike, and each log entry contains a timestamp, error message, error level and exception type. We believe it would be beneficial for future development to have an additional log that records other messages as well. Log4j can be configured to record other informations as well if needed. That information can be used to 	debug potential errors and to analyse the connectivity history.
 
 Secondly, we have implemented an additional context to specifically query if the MSE is online. When requesting this URI, the system will attempt to connect to MSE and the response will depend on whether it retrieves a HTTP response code from MSE. Using this URI, it is very easy to learn that a problem stems from MSE being unresponsive, and is not a consequence of an error internally in our system.
 
@@ -17,7 +17,7 @@ Secondly, we have implemented an additional context to specifically query if the
 In \cref{sec:secure} it was argued that login details should not be hardcoded, as anyone with access to the source code would be able to connect to the system. We have changed the password from being static to being dynamic using the programs arguments. Previously the program had 3 arguments, IP address for MSE, MSE username and MSE password. As of this update, we have added an additional two arguments, intermediate server username and intermediate server password.
 
 \subsection*{Hashing of MAC Address}
-Due to a request from the Heatmap group, to be able to track people by some unique value, we have elected to hash the MAC addresses rather than replace them with the string \emph{OBFUSCATED}. In \cref{sec:secure}, we explored the possibility of doing so, by using Javas hashCode(), which is implemented in the String library. However, hashCode() returns a string consisting of only integers, which gives a higher risk of having overlap when hashing. Instead, we chose to use the Guava-19 library, which returns a much longer value consisting of both numbers and letters. By doing so it allows for hashed MAC addresses to contain letters, reducing the possibility for overlapping hashed MAC addresses. The salt applied is a random string that is regenerated every twelve hours. 
+Due to a request from the Heatmap group, to be able to track people by some unique value, we have elected to hash the MAC addresses rather than replace them with the string \emph{OBFUSCATED}. In \cref{sec:secure}, we explored the possibility of doing so, by using Javas hashCode(), which is implemented in the String library. However, hashCode() returns a string consisting of only integers, which gives a higher risk of having overlap when hashing. Instead, we chose to use the Guava-19 library \cite{Guava}, which returns a much longer value consisting of both numbers and letters. By doing so it allows for hashed MAC addresses to contain letters, reducing the possibility for overlapping hashed MAC addresses. The salt applied is a random string that is regenerated every twelve hours. 
 
 \begin{lstlisting}[caption={Hashing a MAC address},label={lst:ourhash},language=inc_Java]
 oldMacAddress = oldMacAddress + salt;
