--- a/formalia/resume.tex
+++ b/formalia/resume.tex
@@ -1,5 +1,5 @@
 \chapter*{Summary}
-In this multi-project our group have been concerned with indoor positioning. Our main goal have been to provide the applications utilising indoor positions with information about people's location in indoor spaces. We chose to utilise Cisco MSE, which is available at Aalborg University (AAU). MSE is capable of locating Wi-Fi devices via certain calculations on the Received Signal Strength Indication (RSSI).
+In the aSTEP multi-project our group has been concerned with indoor positioning. Our main goal has been to provide the applications utilising indoor positions with information about people's location in indoor spaces. We chose to utilise Cisco MSE, which is available at Aalborg University (AAU). MSE is capable of locating Wi-Fi devices via certain calculations on the Received Signal Strength Indication (RSSI).
 
 With MSE we are able to extract the geographical location of all devices within the boundaries of the system, even if the device is not connected to the network. However, since MSE grants us access to personal informations of all the devices such as the MAC address' and if people are logged on to the network their mail. The Cisco administrator asked of us to make this non accessible to anyone, and since it is only accessible through his closed network we made an intermediate server from which we could obfuscate personal information and retrieve the data from. By doing so not even we are able to access the sensitive information. 
 
