--- a/formalia/synopsis.tex
+++ b/formalia/synopsis.tex
@@ -1,4 +1,4 @@
-Indoor positioning is one of the fields predicted to advance significantly in the coming years \cite{DonDIndoorIsNext}. In the aSTEP multi-project, our group is concerned with indoor positioning. We have chosen to utilise Cisco MSE \cite{ciscoMSE}, which is available through the university campus at Aalborg University. From the MSE we are able to extract positions and other related informations about all Wi-Fi devices at the university campus.
+Indoor positioning is one of the fields predicted to advance significantly in the coming years \cite{DonDIndoorIsNext}. In the aSTEP multi-project, our group is concerned with indoor positioning. After researching various positioning technologies, we have chosen to utilise Cisco MSE \cite{ciscoMSE}, which is available through the university campus at Aalborg University. From the MSE we are able to extract positions and other related informations about all Wi-Fi devices at the university campus.
 
 Our goals is to deliver indoor position coordinates from Wi-Fi devices to the application groups. To do this we have set up an intermediate server, at the Cisco Administrator's network. It is responsible for extracting data from the MSE, processing it and sending it to a client on the aSTEP server that sends it to the database. We have access to sensitive data such as MAC addresses, and therefore security is a concern. Because of this we will explore possibilities to protect the sensitive data and still make it usable to the application groups.
 
