--- a/3sprint/update_rest.tex
+++ b/3sprint/update_rest.tex
@@ -1,5 +1,5 @@
 \section{Intermediate Server Update}\label{sec:proxy_update1}
-We plan on implementing an update to the intermediate server that is used to communicate with AAU's MSE. This update is a consequence of MSE being updated to support geographic coordinates. The update is planned to remove a bug causing loss of data during conversion between different data formats. This section covers the motivation for the following changes in the update:
+We plan on implementing an update to the intermediate server that is used to communicate with AAU's MSE. This update is a consequence of MSE being updated to support geographic coordinates, as mentioned in \cref{sec:geo_coordinates}. The update is planned to remove a bug causing loss of data during conversion between different data formats. This section covers the motivation for the following changes in the update:
 
 \begin{itemize}
 \item Resolved loss of data during conversion
