--- a/bib.bib
+++ b/bib.bib
@@ -152,7 +152,7 @@
 @MANUAL{ciscoMSE,
 	title = {Cisco Mobility Services Engine},
 	author = {Cisco},
-	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html\#74225},
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html#74225},
 	note = {Accessed: 01-03-2016}
 }
 @MISC{cisco_mse_api,
@@ -237,12 +237,12 @@
 	author = {William J. Hughes Technical Center and NSTB/W AAS T\&E Team and Atlantic City International Airport and NJ 08405},
 	title = {Global Positioning System (GPS) Standard Positioning Service (SPS) Performance Analysis Report},
 	note = {Accessed 16-3-2016},
-	url ={http://www.nstb.tc.faa.gov/reports/PAN86\_0714.pdf\#page=22}
+	url ={http://www.nstb.tc.faa.gov/reports/PAN86_0714.pdf#page=22}
 }
 @MANUAL{geo_cisco,
 	title = {Configuring Cisco Prime Infrastructure},
 	author = {Cisco},
-	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html\#pgfId-1019702},
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html#pgfId-1019702},
 	note = {Accessed: 18-03-2016}
 }
 @MISC{junit4,
