--- a/rapport.tex
+++ b/rapport.tex
@@ -48,7 +48,7 @@
 \include{appendix/data_dump}
 
 %%Glossary
-%\printglossary[style=long]
+\printglossary[style=long]
 
 %% List of figures
 \listoffigures
@@ -57,11 +57,11 @@
 \listoftables
 
 %% List of listings
-\lstlistoflistings
+%\lstlistoflistings
 
 %% List of Fx notes
-\newpage
-\listoffixmes
+%\newpage
+%\listoffixmes
 
 %%%% Kilder %%%%
 \begingroup
