--- a/appendix/data_dump.tex
+++ b/appendix/data_dump.tex
@@ -1,3 +1,4 @@
+\chapter{Appendix A}
 \begin{lstlisting}[caption={TCP Data Package},label={lst:data_dump},mathescape]
 ***********************TCP Packet*************************
 IP Header
