corrected our system

--- a/experience/our_system.tex
+++ b/experience/our_system.tex
@@ -1,11 +1,11 @@
 \section{Our System}
-When building our system we ran into a few problems, this section's purpose is to explain what we did to resolve the problem and which problems we were not able to solve, lastly we will explain what needed to further be done, in order to get a working system.
+When building our system we ran into a few problems, this section's purpose is to explain what we did to resolve the problems and which problems we were not able to solve. Lastly we will explain what further steps are required, in order to get a working system.
 
 \subsection*{Routers}
-How to make a program run with root access on the Ubiquiti router. In \cref{sec:ourSys} we explained that in order to gain root access, a custom firmware is required. The firmware we use is named openwrt-ar71xx-generic-ubnt-airrouter-squashfs-factory.bin and allow us to get root access. With the new firmware that is based on Unix, we are able to run program and use dpkg to install programs like python on the routers. with the new firmware we were able to develop C and python programs, when programming a C program for the router it is preferably to be on a Unix system yourself, because the libraries for Windows and Unix are not the same. So a program that can run on a Windows system might not run on a Unix system. Originally python compiler requires about 250 MB to run python programs but with tiny python it only requires 64k, the tiny version has fewer libraries. This leads to us not having the socket library and we were not successfully in importing the library.
+Initially we had the goal of making a program run with root access on the Ubiquiti router. In \cref{sec:ourSys} we explained that in order to gain root access, a custom firmware is required. The firmware we use is named openwrt-ar71xx-generic-ubnt-airrouter-squashfs-factory.bin and allows us to get root access. With the new firmware, which is based on Unix, we are able to run programs and use dpkg to install software like a Python interpreter on the routers. With the new firmware we were able to develop C and python programs. When programming a C program for the router it is preferable to be on a Unix system yourself, because the libraries for Windows and Unix are not the identical. So a program that can run on a Windows system might not run on a Unix system. Originally, the Python compiler requires about 250 MB to run Python programs but with tiny python it only requires 64k. The tiny version has fewer libraries. This leads to us not having the socket library and we were not successfully in importing the library.
 
-We ended up using a C program from BinaryTides website\cite{SnifferCode}, When the program is started it retrieves data from the network interface. An example of the TCP packet retrieved using the program can be seen in \cref{lst:data_dump}, it contains information about length of the packet, source IP, destination IP, port and some attributes, in the button of the example, the DATA Dump can be seen, this contain the actual information about the sent packet, on the left the data is represented in hexadecimal and on the right it is converted into ASCII. Unfortunately it dose not look like we are able to get signal strength, but should be explored further.
+We ended up using a C program from BinaryTides website \cite{SnifferCode}. When the program is started it retrieves data from the network interface. An example of the TCP packet retrieved using the program can be seen in \cref{lst:data_dump}. It contains information about length of the packet, source IP, destination IP, port and some attributes. In the bottom of the example, the DATA Dump can be seen. This contains the actual information about the packet, on the left the data is represented in hexadecimal and on the right it is converted into ASCII. Unfortunately it does not look like we are able to get signal strength, but this should be explored further.
 
-Trying to get signal strength we discovered some thing that might obstruct us from retrieving the signal strength, the first thing is to set our router to passive mode, this would be achieved with the custom firmware we installed, the second thing is the network drivers, this we was not able to explore more into, but should be done to further advance building a tracking system.
+As we were trying to get signal strength, we discovered some things that might obstruct us from retrieving the signal strength. First, our router has to be set to passive mode. This could be achieved with the custom firmware we installed. The second problematic component is the network drivers. We were not able to explore this any further, but should be done to advance building a tracking system.
 
-Hypothetically if we were to retrieve the signal strength dose not mean that we are done with the tracking system, you still need to potentially forwarded the data manually if the hotspots and router can not relay the correct information about which hotspot was used to observe the device. Additionally the router need to send the data to some sort of storage device. After that a program will have developed using the data to turn the information data into actually tracking devices.
+Hypothetically, if we were to retrieve the signal strength, it does not imply that we are done with the tracking system. You still need to potentially forward the data manually, if the hotspots and router can not relay the correct information about which hotspot was used to observe the device. Additionally, the router needs to send the data to some sort of storage device. After that, a program needs to be developed to turn the data into information that can be used to track devices.
