--- a/formalia/titelblad.tex
+++ b/formalia/titelblad.tex
@@ -66,4 +66,4 @@ Synopsis: \\[5pt]
 {\footnotesize\itshape The content of the report is freely available, but publication (with source reference) may only take place in agreement with the authors.}
 
 % Rapportens indhold er frit tilgængeligt, men offentliggørelse (med kildeangivelse) må kun ske efter aftale med forfatterne.
-The content of the report is freely available, but publication (with source reference) may only take place in agreement with the authors.
+%The content of the report is freely available, but publication (with source reference) may only take place in agreement with the authors.
